@@ -49,6 +49,19 @@ export M2=/home/atlas/.m2
 
 echo JAVA_HOME="${JAVA_HOME}"
 
+JAVA_VERSION=$("${JAVA_HOME}/bin/java" -version 2>&1 | awk -F[\".] '/version/ {print $2}')
+
+echo "Java version: ${JAVA_VERSION}"
+
+if [ "$JAVA_VERSION" == "17" ]; then
+  export MAVEN_OPTS="-Xms2g -Xmx2g --add-opens=java.base/java.lang=ALL-UNNAMED \
+  --add-opens=java.base/java.lang.reflect=ALL-UNNAMED \
+  --add-opens=java.base/java.net=ALL-UNNAMED \
+  --add-opens=java.base/java.nio=ALL-UNNAMED"
+fi
+
+echo "MAVEN_OPTS set to: $MAVEN_OPTS"
+
 if [ "${BUILD_HOST_SRC}" == "true" ]
 then
   if [ ! -f /home/atlas/src/pom.xml ]
@@ -94,7 +107,9 @@ for f in \
   "distro/target/apache-atlas-${ATLAS_VERSION}-server.tar.gz" \
   "distro/target/apache-atlas-${ATLAS_VERSION}-hive-hook.tar.gz" \
   "distro/target/apache-atlas-${ATLAS_VERSION}-hbase-hook.tar.gz" \
-  "distro/target/apache-atlas-${ATLAS_VERSION}-kafka-hook.tar.gz"
+  "distro/target/apache-atlas-${ATLAS_VERSION}-kafka-hook.tar.gz" \
+  "distro/target/apache-atlas-${ATLAS_VERSION}-rest-server.tar.gz"
+
 do
   if [ -f "${f}" ]; then
     mv -f "${f}" /home/atlas/dist/
